# tucuxi

./: .cookiecutter.json  .flake8  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  conftest.py  noxfile.py  pyproject.toml  pytest.ini
docs/: conf.py  index.rst  reference.rst
src/tucuxi/: __init__.py  helpers.py  s3.py  session.py  sqs.py
tests/: test_s3.py  test_session.py  test_sqs.py
