[tool.poetry]
name = "tucuxi"
version = "0.1.0"
description = "Tucuxi"
authors = ["Luccas Quadros <luccas.quadros@softplan.com.br>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/unj-inovacao/tucuxi/"
repository = "https://github.com/unj-inovacao/tucuxi/"
documentation = "https://tucuxi.readthedocs.io/"
keywords = ["AWS", "S3", "SQS"]

[tool.poetry.urls]
Changelog = "https://github.com/unj-inovacao/tucuxi/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
boto3 = "^1.12.26"
boltons = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.8.1"
moto = "^1.3.14"
safety = "^1.9.0"
flake8 = "^3.8.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
pep8-naming = "^0.10.0"
darglint = "^1.3.0"
mypy = "^0.770"
typeguard = "^2.7.1"
xdoctest = "^0.12.0"
sphinx = "^3.0.3"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.4.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["tucuxi"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
